# MenuSideKick

./: .dockerignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: ci_cd.yml
apps/admin_dashboard/: admin.py  models.py  serializers.py  sigleton_structure.py  urls.py  views.py
apps/admin_dashboard/migrations/: 0001_initial.py  0002_remove_feedbackmodel_name.py  0003_eatingstylemodel_details.py  0004_medicalconditionmodel_medical_description.py  0005_alter_allergymodel_allergy_name_and_more.py  0006_alter_eatingstylemodel_eating_style_name.py  0007_alter_aboutusmodel_image_and_more.py  0008_alter_aboutusmodel_image_and_more.py
apps/ai_responses/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/ai_responses/bots/: chatbot_ai.py  combo_creator_ai.py  magiclist_ai.py  ocr_ai.py  platter_designer_ai.py
apps/ai_responses/migrations/: 0001_initial.py  0002_initial.py  0003_myplatemodel.py  0004_remove_myplatemodel_description_and_more.py  0005_remove_scanneddocumentmodel_file_url_and_more.py
apps/payments/: admin.py  models.py  serializers.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py  0002_initial.py  0003_alter_transactionmodel_product_id.py  0005_alter_paymentplan_interval.py  (+1 more)
apps/users/: adapters.py  admin.py  backends.py  models.py  serializers.py  urls.py  utils.py  views.py
core/: settings.py  urls.py
core/middleware/: blocked_user_middleware.py  translate_middleware.py
core/utils/: ai_translator.py  custompermissions.py
(+10 files in other folders)
